# ken-rag

./: .gitignore  README.md  ken-rag-spec.md  pyproject.toml
docs/superpowers/checkpoints/: 2026-06-24-phase1-resume.md
docs/superpowers/plans/: 2026-06-24-ken-rag-v1.md
docs/superpowers/specs/: 2026-06-24-ken-rag-architecture-draft.md
src/ken_rag/: __main__.py
src/ken_rag/chunking/: __init__.py  base.py  fallback_chunker.py  prose_chunker.py  registry.py
src/ken_rag/cli/: app.py  context.py  errors.py  render.py
src/ken_rag/config/: defaults.py  loader.py  paths.py  settings.py
src/ken_rag/domain/: enums.py  errors.py  models.py  protocols.py
src/ken_rag/embedding/: __init__.py  dimension.py  ollama_embedder.py
src/ken_rag/generation/: __init__.py  citation.py  ollama_generator.py  prompt.py
src/ken_rag/llm/: __init__.py  ollama_client.py
src/ken_rag/parsing/: __init__.py  registry.py  text_parser.py
src/ken_rag/pipeline/: __init__.py  ingest.py  query.py
src/ken_rag/retrieval/: __init__.py  fusion.py  pipeline.py  retriever.py  stages.py
src/ken_rag/store/: __init__.py  lancedb_store.py  metadata_store.py  migrations.py  (+1 more)
tests/: conftest.py
tests/e2e/: test_cli_add_ask.py
tests/fakes/: fake_embedder.py  fake_generator.py  fake_meta.py  in_memory_store.py
tests/integration/: test_lancedb_store.py  test_pipeline.py
tests/unit/: test_citation.py  test_domain_models.py  test_embedder.py  test_errors.py  test_ollama_client.py  test_prompt.py  test_prose_chunker.py  test_retrieval.py  test_settings.py  test_text_parser.py  test_walker.py
(+7 files in other folders)
