[project]
name = "ken-rag"
version = "0.1.0"
description = "RAG that actually understands your code — local, private, lives in your terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.60",
    "lancedb>=0.13",
    "pyarrow>=16",
    "httpx>=0.27",
    "pymupdf>=1.24",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=1.9",
    "pathspec>=0.12",
    "psutil>=6.0",
]

[project.scripts]
ken = "ken_rag.cli.app:main"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "respx>=0.21", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
